Added some some unwanted irrelevance

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Testing Webpage</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>title</title>
+	<a href="style.css/"
 </head>
 <body>
-	<div class="box">
-		<h1 align="center">Website</h1>
-		<h2 align="center">Website description</h2>
-		<h3 align="center">Pages</h3>
+	<div class="row">
+		<div class="col-x-x">.col-</div>
+		<div class="col-x-x"></div>
+		<div class="col-x-x"></div>
+		<div class="col-x-x"></div>
 	</div>
 </body>
 </html>
